# RTSA-lab01-CacheAnalysis

./: .clang-tidy  .drone.yml  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  helper.sh  poolhelper.sh
.devcontainer/: Dockerfile  devcontainer.json
CacheAnalysisPass/: CMakeLists.txt  CacheAnalysisPass.cpp
UnitTest/: CMakeLists.txt  UnitTest.cpp
include/: AbstractCache.h  AbstractState.h  Address.h  CFG.hpp  CacheType.h  ConcreteState.h
test/: adpcm.ll  bs.ll  bsort100.ll  cnt.ll  compress.ll  cover.ll  crc.ll  dijkstra.ll  duff.ll  edn.ll  expint.ll  fdct.ll  fft1.ll  fibcall.ll  fir.ll  insertsort.ll  janne_complex.ll  jfdctint.ll  lcdnum.ll  lms.ll  ludcmp.ll  matmult.ll  minver.ll  ndes.ll  ns.ll  nsichneu.ll  prime.ll  qsort-exam.ll  qurt.ll  recursion.ll  select.ll  sqrt.ll  statemate.ll  ud.ll  whet.ll
test/src/: README.md  dijkstra.c
